--- a/SocialNetworkProject_3-22-05/appsettings.json
+++ b/SocialNetworkProject_3-22-05/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SocialDb_2;Integrated Security=True;"
+    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SocialDb_2;Integrated Security=True;",
+    "Production": "Server=tcp:myserver11122.database.windows.net,1433;Initial Catalog=stepsocialDB;Persist Security Info=False;User ID=Elvin_1999;Password=Camalzade_123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
