--- a/SocialNetworkProject_3-22-05/Properties/launchSettings.json
+++ b/SocialNetworkProject_3-22-05/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7285;http://localhost:5199",
+      "applicationUrl": "https://mysocialaelvin-a8b9asf0gybmdzhu.centralindia-01.azurewebsites.net;https://localhost:7285;http://localhost:5199",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
